# communicatie

./: .env.example  .gitignore  LICENSE  README.md  _config.db  auth.py  chat.html  common.py  communicatie.css  communicatie.js  communicatie.py  communication.py  config.py  db.py  db_config.py  federation.py  index.html  install.cmd  install.ps1  install.sh  login.html  main.py  peers.py  postgres.py  pyproject.toml  request_handler.py  requirements.txt  schema.sql  schema_sqlite.sql  setting.py  ssl_manager.py  update.ps1  update.sh  utils.py
handlers/: http.py  ws.py
src/communicatie/: __init__.py  __main__.py  config.py
templates/: advanced.html  channels.html  chat.html  communicatie.css  communicatie.js  emoji-picker.js  index.html  login.html  manifest.json  peers.html  server.html  setup.html  stream.html  user.html  users.html  wiki.css
templates/wiki/: _base.html  channels.html  federation-protocol.html  getting-started.html  home.html  peers.html  privacy.html  router.html  security.html  server.html  users-page.html
tests/: test_config.py
