[project]
name = "communicatie"
version = "0.0.1"
description = "Federated chat where every user runs their own server and owns their data."
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "aiohttp-jinja2>=1.6",
    "jinja2>=3.1",
    "asyncpg>=0.29",
    "pydantic>=2.6",
    "cryptography>=42.0",
    "argon2-cffi>=23.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
communicatie = "communicatie.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
